--- a/src/styles/shared-styles.scss
+++ b/src/styles/shared-styles.scss
@@ -32,6 +32,8 @@ $light-button-hover-background-color: rgba(249, 249, 249);
 
 $light-icon-color: rgb(117, 117, 117);
 $light-icon-hover-background-color: rgba(235, 235, 235);
+$light-icon-note-color:rgb(32,33,36);
+$light-icon-note-hover-background-color: rgb(255,255,255,0.5);
 
 $light-search-background-color: rgb(245, 245, 245);
 $light-search-color: rgb(32, 33, 36);
