--- a/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
+++ b/src/app/notes/components/main/note-display/single-note/single-note/single-note.component.scss
@@ -159,6 +159,16 @@
     border: 1px solid $light-border-color;
     box-shadow: none;
 
+    .icon {
+        i {
+            color: $light-icon-note-color;
+        }
+
+        &:hover {
+            background-color: $light-icon-note-hover-background-color;
+        }
+    }
+
     &>.info {
         &>main {
             .empty {
@@ -176,7 +186,7 @@
     &>.labels>p,
     span,
     .remainder {
-        border: none;
-        background-color: $light-icon-hover-background-color;
+        border: 1px solid $light-border-color;
+        background-color: $light-icon-note-hover-background-color;
     }
 }
